<resources>
    <string name="app_name">InmobiliariaLucero</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inmobiliaria Lucero</string>
    <string name="nav_header_subtitle">nahuellucero25@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Salir</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contrato">Contrato</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>