<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.inmobiliarialucero.ui.Inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.inmobiliarialucero.ui.perfil.PerfilFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.inmobiliarialucero.ui.logout.LogoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.inmobiliarialucero.ui.contrato.ContratoFragment"
        android:label="@string/menu_contrato"
        tools:layout="@layout/fragment_contrato" />"

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliarialucero.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmueble" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliarialucero.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos"/>
</navigation>